Typing out the trigger no longer causes the the menu to pop when there aren't any whitespaces before the trigger.

--- a/src/jquery-ui.inlinedAutocomplete.less
+++ b/src/jquery-ui.inlinedAutocomplete.less
@@ -1,6 +1,8 @@
 @border-radius             : 5px;
 @highlight-background-color: lighten(#202080, 20%);
 @menu-item-padding         : 9px;
+@image-size                : 37px;
+@font-size                 : 12px;
 
 .inlined-autocomplete {
   background-image: none;
@@ -57,20 +59,20 @@
     }
     
     a .image {
-      width: 37px;
+      width: @image-size;
       margin-right: 8px;
     }
 
     p {
       padding: 0;
       margin: 0;
-      font-size: 12px;
+      font-size: @font-size;
     }
 
     img {
       padding-right: 10px;
-      width: 37px;
-      height: 37px;
+      width: @image-size;
+      height: @image-size;
     }
   }
 }
